@@ -243,6 +243,7 @@ GeneralView.label.trackerurl=Tracker URL :
 GeneralView.label.trackerurlupdate = Update Tracker
 GeneralView.label.comment=Torrent Comment :
 GeneralView.label.user_comment=User Comment : 
+GeneralView.label.status=Status :
 ManagerItem.waiting=Waiting
 ManagerItem.allocating=Allocating
 ManagerItem.checking=Checking
